--- a/source/photos/index.ejs
+++ b/source/photos/index.ejs
@@ -1,18 +1,20 @@
 ---
 layout: post
 slug: "photos"
-title: "相册"
+title: "Instagram相册"
 noDate: "true"
 comments: "false"
 ---
 <link rel="stylesheet" href="./ins.css">
-<div class="photos-btn-wrap">
-	<a class="photos-btn active" href="javascript:void(0)">Ins</a>
-	<a class="photos-btn" target="_blank" href="http://litten.me/gallery/">摄影</a>
+
+<div>
+<a href="https://www.instagram.com/raysmond29/">所有照片来自于我的Instagram</a>
 </div>
+
 <div class="instagram itemscope">
-	<a href="https://www.instagram.com/litten225/" target="_blank" class="open-ins">图片来自instagram，正在加载中…</a>
+	<a href="https://www.instagram.com/raysmond29/" target="_blank" class="open-ins">图片来自instagram，正在加载中…</a>
 </div>
+
 <script>
   (function() {
     var loadScript = function(path) {
