--- a/source/douban/index.ejs
+++ b/source/douban/index.ejs
@@ -123,7 +123,7 @@ comments: "true"
     function loadDoubanCollections() {
       var xhr = new XMLHttpRequest();
       // https://api.douban.com/v2/book/user/:name/collections
-      xhr.open('GET', 'http://7b1fa0.com1.z0.glb.clouddn.com/douban-20170427.json', true);
+      xhr.open('GET', 'http://7b1fa0.com1.z0.glb.clouddn.com/douban-20170429-1.json', true);
 
       xhr.onload = function() {
         if (this.status >= 200 && this.status < 300) {
